--- a/Marvel/src/main/AndroidManifest.xml
+++ b/Marvel/src/main/AndroidManifest.xml
@@ -23,8 +23,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.activities.MainActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".ui.activities.MainActivity">
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
